cdrkit (5:1.0~pre3-2) unstable; urgency=low

  * added detection for libcam header (closes: #385975)

 -- Eduard Bloch <blade@debian.org>  Mon,  4 Sep 2006 23:39:20 +0200

cdrkit (5:1.0~pre3-1) unstable; urgency=low

  [ Eduard Bloch ]
  * New upstream snapshot
  * Updates/fixes of README.ATAPI.setup, README.Debian, wodim.NEWS from
    Michael Ablassmeier

  [ Joerg Jaspert ]
  * Several other upstream fixes included, should make it work on ppc.

 -- Joerg Jaspert <joerg@debian.org>  Mon,  4 Sep 2006 19:38:57 +0200

cdrkit (5:1.0~pre2-1) unstable; urgency=low

  * Restored the build system of zisofs-tools and changed to its use in
    debian/rules. It is a separate project with a mature build system while
    the replacement would need improvements to keep up.

 -- Eduard Bloch <blade@debian.org>  Mon,  4 Sep 2006 01:24:22 +0200

cdrkit (5:1.0~pre1-1) unstable; urgency=low

  [ Eduard Bloch ]
  * dropped the shm build (kernel 2.2 is history)
  * dropped dpatch integration, we are the upstream now
  * disabled debconf messages and device-creating code for now
    (closes: #326138, #314139); things like hints to create device files are
    essential for only few people and can equaly be presented as program
    messages. Why shall we still MAKEDEV them?  It's not like we have switched
    to kernel 2.0.1 yesterday (closes: #342085, #188827, #200665)
  * updated Build-Dependencies for kfreebsd (closes: #355291)
  * debian/copyright got uptodate mail address for Schilling (closes: #372484)

  [ Eduard Bloch, upstream related changes ] 
  * The Big Fork to an independent project called cdrkit
    + using the last clearly stated GPLed versions of files from
      cdrtools-2.01.01a08 (closes: #353403, #372486)
    + we play the upstream role now, using our patches and we like them
      (closes: #361450)
    + renamed relevant works to avoid claims of "potential defamation" or
      "damage of reputation" (closes: #350738)